SUBDIRS = src

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = libtorrent.pc

EXTRA_DIST= \
	autogen.sh \
	scripts/checks.m4 \
	scripts/common.m4 \
	doc/main.xml \
	doc/http.xml \
	doc/torrent.xml \
        rak/algorithm.h \
	rak/error_number.h \
        rak/functional.h \
	rak/ranges.h \
	rak/string_manip.h \
	rak/unordered_vector.h
