SUBDIRS = src

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = libtorrent.pc

EXTRA_DIST= \
	autogen.sh \
	scripts/checks.m4 \
	scripts/common.m4 \
	doc/main.xml \
	doc/http.xml \
	doc/torrent.xml \
        rak/algorithm.h \
	rak/error_number.h \
        rak/functional.h \
        rak/functional_fun.h \
	rak/priority_queue.h \
	rak/priority_queue_default.h \
	rak/ranges.h \
	rak/regex.h \
	rak/string_manip.h \
	rak/timer.h \
	rak/unordered_vector.h
