option('epoll', type: 'feature')
option('execinfo', type: 'feature')
option('inotify', type: 'feature')
option('kqueue', type: 'feature')
option('madvise', type: 'feature')
option('mincore', type: 'feature')
option('statvfs', type: 'feature')
option('statfs', type: 'feature')
option('tests', type: 'feature')
